# Aether-agent-os

./: .dockerignore  .env.example  .gitignore  AGENT-FUNCTIONALITY-ANALYSIS.md  App.tsx  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  Dockerfile.desktop  Dockerfile.ui  README.md  docker-compose.yml  eslint.config.js  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
cli/: package.json
data/: mockFileSystem.ts
docker/: entrypoint.sh  nginx.conf
docs/: ANALYSIS-REPORT.md  ARCHITECTURE.md  CLAUDE-CODE-IMPROVEMENT-PLAN.md  CODEBASE.md  COMPETITIVE-ANALYSIS.md  EXTENSION-GUIDE.md  FEATURES.md  IDEAS.md  NEXT-MOVES.md  NEXT_STEPS.md  OPENCLAW-INTEGRATION.md  P0-PLAN.md  PLAN-AGENT-RUNTIME-INTEGRATION.md  PLAN-MCP-OPENCLAW.md  PLAN-SELF-MODIFICATION.md  RESEARCH-agent-integration.md  RESEARCH-dgx-os.md  RESEARCH-future-plans-summary.md  RESEARCH-openclaw-ideas.md  ROADMAP-v0.2.md  ROADMAP-v0.3-execution.md  ROADMAP-v0.3.md  ROADMAP-v0.4.md  ROADMAP-v0.5.md  SESSION-PROMPT-v0.2-wave2.md  SESSION-PROMPT-v0.3.md  SESSION-PROMPT-v0.5-hybrid.md  SESSION-PROMPTS-v0.2.md  SUMMARY.md  SYSTEM-AUDIT.md  TESTING-NOTES.md  TODO.md  VISION.md  WHAT_IS_AETHER.md
embed/: package.json  tsconfig.json
hooks/: index.ts  useAgentBridge.ts  useAuth.ts  useMockAgentLoop.ts  (+2 more)
sdk-python/: README.md  pyproject.toml
sdk-python/aether/: __init__.py  _transport.py  async_client.py  client.py  events.py  exceptions.py  namespaces.py
sdk-python/tests/: test_client.py
(+270 files in other folders)
