[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aether-os-sdk"
version = "0.4.0"
description = "Python SDK for Aether OS — manage agents, filesystems, and workflows programmatically"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Aether OS Contributors" },
]
keywords = ["aether", "agents", "sdk", "ai", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "httpx-sse>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/aether-os/aether-agent-os"
Documentation = "https://docs.aether-os.dev/sdk/python"
Repository = "https://github.com/aether-os/aether-agent-os"

[tool.hatch.build.targets.wheel]
packages = ["aether"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
